--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,18 +3,13 @@
   icon: fab fa-wordpress
   new_window: true
   highlight: false
-- name: SW Blog
-  link: https://soywiz.com/
-  icon: fab fa-wordpress
-  new_window: true
-  highlight: false
 - name: Documentation
-  link: https://korlibs.soywiz.com/korge/
+  link: https://docs.korge.org/
   icon: fa fa-book
   new_window: true
   highlight: false
 - name: Slack
-  link: https://slack.soywiz.com/
+  link: https://slack.korge.org/
   icon: fab fa-slack
   new_window: true
   highlight: false
