--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,9 +8,19 @@
   icon: fa fa-book
   new_window: true
   highlight: false
+- name: Dokka
+  link: https://dokka.korge.org/
+  icon: fas fa-question-circle
+  new_window: true
+  highlight: false
 - name: Slack
   link: https://slack.korge.org/
   icon: fab fa-slack
+  new_window: true
+  highlight: false
+- name: Youtube
+  link: https://youtube.korge.org/
+  icon: fab fa-youtube
   new_window: true
   highlight: false
 - name: GameJAM
