--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,11 @@
   icon: fa fa-book
   new_window: true
   highlight: false
+- name: Forum
+  link: https://forum.korge.org/
+  icon: fas fa-comments
+  new_window: true
+  highlight: false
 - name: Dokka
   link: https://dokka.korge.org/
   icon: fas fa-question-circle
