--- a/_data/info.yml
+++ b/_data/info.yml
@@ -1,6 +1,5 @@
 links:
   facebook: "#"
-  twitter: "#"
-  instagram: "#"
+  twitter: https://twitter.com/KorgeGameEngine
   linkedin: "#"
 download: https://github.com/korlibs/korge-hello-world/archive/master.zip
