Added Melitha, joko, ... to showcase

--- a/_data/showcase_categories.yml
+++ b/_data/showcase_categories.yml
@@ -4,3 +4,7 @@
   filter: ".puzzle"
 - title: Platformer
   filter: ".platformer"
+- title: RPG
+  filter: ".rpg"
+- title: ARCADE
+  filter: ".arcade"
