Fix youtube link

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -15,7 +15,7 @@
   icon: lni lni-slack
   color: 3
 - content: |
-    [Youtube](https://korge.youtube.org)
+    [Youtube](https://www.youtube.com/channel/UCqp_cKZ-O-JFtX5pbx55BLA)
   icon: lni lni-youtube
   color: 2
 - content: |
