--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   It allows to target JVM, JS, Linux, Windows, MacOS, Android and iOS.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: KorgeGameEngine
+github_username:  korlibs
 
 # Build settings
 markdown: kramdown
