--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ github_username:  korlibs
 
 # Build settings
 markdown: kramdown
-plugins:
-  - jekyll-feed
+#plugins:
+#  - jekyll-feed
 
 collections:
   carousel:
