--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: KorGE - Modern Multiplatform Game Engine for Kotlin
+analytics_id: G-LM8YTX35TY
 email: info@korge.org
 description: >- # this means to ignore newlines until "baseurl:"
   KorGE is a multiplatform Game Engine written in Kotlin.
