--- a/_data/info.yml
+++ b/_data/info.yml
@@ -1,5 +1,6 @@
 links:
-  facebook: "#"
+  facebook: https://facebook.korge.org/
   twitter: https://twitter.com/KorgeGameEngine
-  linkedin: "#"
+  instagram: https://instagram.korge.org/
+  linkedin: https://linkedin.korge.org/
 download: https://github.com/korlibs/korge-hello-world/archive/main.zip
