--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "type": "module",
   "dependencies": {
+    "@11ty/eleventy": "^3.0.0",
+    "nunjucks": "^3.2.4",
+    "remove-markdown": "^0.5.5"
   },
   "scripts": {
-    "start": "cd .11ty && eleventy --serve",
-    "serve": "cd .11ty && eleventy --serve",
-    "build": "cd .11ty && eleventy"
+    "start": "cd .11ty && npm install && npx @11ty/eleventy --serve",
+    "serve": "cd .11ty && npm install && npx @11ty/eleventy --serve",
+    "build": "cd .11ty && npm install && npx @11ty/eleventy"
   }
 }
